Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/classes/TNP_001_AccountTrigger_SVE.cls
+++ b/unpackaged/main/default/classes/TNP_001_AccountTrigger_SVE.cls
@@ -9,82 +9,51 @@
 -- 20/03/2023    IZR    1.0      Intitial version
 -------------------------------------------------------------------------------------------
 */
-public class TNP_001_AccountTrigger_SVE {
+public with sharing class TNP_001_AccountTrigger_SVE {
     Public Static String CLASS_NAME = 'TNP_001_AccountTrigger_SVE';
     
-    public static void listAccountAfterInsert( list<account> accountToInsert)
+    public static void listAccountAfterInsert( list<account> listAccountToInsert)
     {  
         String METHOD_NAME = 'listAccountAfterInsert';
-        System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'START'); 
-        string jsonstring;
-        String JSONGenerated;
-        list<string> listJSON = new list <String>();
-        Map<Id,User> mapInfoUser = returnMapUserIntegration();
-        map<string,account> mapListAllAccount = new map<string,account>();  
-        if ( !accountToInsert.isEmpty() )
-        {       
-            for (Account acc : accountToInsert ){
-                User user = mapInfoUser.get(acc.CreatedById);
-                System.debug('acc'+acc);
-                System.debug('user'+user);
-               if(user != null ){
-                    if ( user.Name == Label.SFSC_Integration_User  ){
-                        JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFSC_Source );//source 'SFSC'
-                        //TNP_002_ServiceClass.sendRequest(JSONGenerated);
-                        System.enqueueJob(new TNP_001_QueueableCallOut(JSONGenerated));
-                        
-                    }
-                }
-                if(user == null ){
-                        JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFDC_Source );//source 'SFDC'
-                        //TNP_002_ServiceClass.sendRequest(JSONGenerated);
-                        System.enqueueJob(new TNP_001_QueueableCallOut(JSONGenerated));          
-                }
+        list<account> listFinalAccountToInsert = new list<account>();
+        Map<Id,User> mapInfoUser = TNP_002_ServiceClass.returnMapUserIntegration();
+       map<String,SObject> mapSobject  = new map<String,SObject>();
+        for (Account accountToInsert:listAccountToInsert ){
+             User user = mapInfoUser.get(accountToInsert.CreatedById);
+            if (user == null || (user != null && user.Name == Label.SFSC_Integration_User) ){
+                listFinalAccountToInsert.add(accountToInsert);
             }
-            
+        }
+        
+        System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'START'); 
+        if ( !listFinalAccountToInsert.isEmpty() )
+        {    
+            System.enqueueJob(new TNP_001_QueueableCallOut(listFinalAccountToInsert,'',Label.TNP_CL_AfterInsert));   
         }     
         System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'END'); 
     }    
-    public static void listAccountAfterUpdate( list<account> accountToUpdate)
+    
+    
+  public static void listAccountAfterUpdate( list<account> listAccountToUpdate)
     {  
         String METHOD_NAME = 'listAccountAfterUpdate';
         System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'START'); 
-        string jsonstring;
-        String JSONGenerated;
-        Map<Id,User> mapInfoUser = returnMapUserIntegration();
-        map<string,account> mapListAllAccount = new map<string,account>();  
-        if ( !accountToUpdate.isEmpty() )
-        {
-            System.debug(CLASS_NAME+'/'+ METHOD_NAME+'/'+'accountToUpdate -->'+accountToUpdate);
-            for (Account acc : accountToUpdate ){
-                System.debug(CLASS_NAME+'/'+ METHOD_NAME+'/'+'Account -->'+acc);            
-                System.debug(CLASS_NAME+'/'+ METHOD_NAME+'/'+'acc -->'+acc.LastModifiedById);
-                User user = mapInfoUser.get(acc.LastModifiedById);
-                System.debug(CLASS_NAME+'/'+ METHOD_NAME+'/'+'user -->'+user);
-                if( user == Null){
-                    System.debug(CLASS_NAME+'/'+ METHOD_NAME+'/'+'In user Condition');
-                    JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFDC_Source);//source 'SFDC'
-                    // TNP_002_ServiceClass.sendRequest(JSONGenerated); 
-                    System.enqueueJob(new TNP_001_QueueableCallOut(JSONGenerated));             
-                }
-                  if(user != null ){
-                    if ( user.Name == Label.SFSC_Integration_User  ){
-                        JSONGenerated = TNP_002_ServiceClass.GenerateJSON(acc,Label.SFSC_Source );//source 'SFSC'
-                        //TNP_002_ServiceClass.sendRequest(JSONGenerated);
-                        System.enqueueJob(new TNP_001_QueueableCallOut(JSONGenerated));
-                        
-                    }
-                }
-            } 
+         list<account> listFinalAccountToUpdate = new list<account>();
+        Map<Id,User> mapInfoUser = TNP_002_ServiceClass.returnMapUserIntegration();
+       
+        for (Account accountToUpdate: listAccountToUpdate ){
+             User user = mapInfoUser.get(accountToUpdate.LastModifiedById);
+            if (user == null || (user != null && user.Name == Label.SFSC_Integration_User)  ){
+                listFinalAccountToUpdate.add(accountToUpdate);
+            }
+        }
+     if ( !listFinalAccountToUpdate.isEmpty() )
+        {  
+            System.enqueueJob(new TNP_001_QueueableCallOut(listFinalAccountToUpdate,'',Label.TNP_CL_AfterUpdate));   
         }  
+        
         System.debug(CLASS_NAME+ '/' + METHOD_NAME +'/'+ 'END');         
-    }   
-    
-    //Method to get the Id of the User  Integration User
-    public static Map<Id,User> returnMapUserIntegration(){ 
-        String METHOD_NAME = 'returnIdUser' ;
-        System.debug(CLASS_NAME+'/'+ METHOD_NAME+'/'+'Start');
-        return new Map<Id,User>([SELECT Id, Name FROM User WHERE isIntegrationUser__c = TRUE and isActive = TRUE]);
-    }
+    } 
+
     
 }
